0.5 - Unreleased
----------------

* Added ``gitify update`` command, which performs a git-svn rebase operation
  for the current svn checkout.

0.4 - 2009-08-11
----------------

* Refactored the entry points to just use gitify. All other commands are now
  sub-commands of ``gitify``:

  * ``gs-commit`` has been replaced with ``gitify push``
  * ``gs-fetch`` has been replaced with ``gitify fetch``

* Added usage and help output for each command.

* Removed the ``gs-clone`` entry point as it was only ever used together with
  the main gitify command anyway.

* Use proper logging instead of just printing to stdout

* Added comprehensive tests, including functional tests that cover the entire
  update/commit cycle of cloning an svn repository and commiting back to it.

0.3.1 - 2009-07-09
------------------

* BUGFIX: Don't use custom aliases, as they might not be installed. 
  This resolves http://github.com/tomster/git-svn-helpers/issues#issue/2
* BUGFIX: Explicitly list elementtree as dependency
  This resolves http://github.com/tomster/git-svn-helpers/issues#issue/1)

0.3 - 2009-06-09
----------------

* Added the ``gs-commit`` command which helps committing back to svn and
  keeping git and svn in sync

0.2b - 2009-06-05
-----------------

* Added the ``gs-fetch`` command which helps keeping the cache up-to-date


0.1b2 - 2009-05-30
------------------

* BUGFIX: get the svn log from the package root (i.e. ``/path/to/foo``) 
  instead of the locally checked out path (i.e. ``path/to/foo/branches/bar``)
  which is usually much younger than the entire package and thus we would miss
  revisions in the cloning process!


0.1b1 - 2009-05-30
------------------

* Initial release a.k.a. "Works for me"