@@ -2,7 +2,8 @@
 ----------------
 
 * Added ``gitify update`` command, which performs a git-svn rebase operation
-  for the current svn checkout.
+  for the current svn checkout but also handles uncommitted local changes
+  gracelully (like svn does)
 
 0.4 - 2009-08-11
 ----------------
